--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+title: Liming Lu's Homepage
+page-top-title: Limng Lu
+top-section-bg-text: Cuda Out Of Memory
+home-subtitle: Liming Lu&ensp;|&ensp; B.S. @ Shanghai Jiao Tong University
+copyright-text: '&copy; Liming Lu 2025-2026. All Rights Reserved.'
