--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Liming Lu's Homepage
 page-top-title: Limng Lu
-top-section-bg-text: Cuda Out Of Memory
+top-section-bg-text: Attention is All You Need
 home-subtitle: Liming Lu&ensp;|&ensp; B.S. @ Shanghai Jiao Tong University
 copyright-text: '&copy; Liming Lu 2025-2026. All Rights Reserved.'
